--- a/AWQ.ipynb
+++ b/AWQ.ipynb
@@ -2,90 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "de43f425",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Installing packages...\n",
-      "Requirement already satisfied: torch in /home/hayde/miniconda3/lib/python3.13/site-packages (2.9.1)\n",
-      "Requirement already satisfied: transformers in /home/hayde/miniconda3/lib/python3.13/site-packages (4.57.1)\n",
-      "Requirement already satisfied: accelerate in /home/hayde/miniconda3/lib/python3.13/site-packages (1.11.0)\n",
-      "Collecting sentencepiece\n",
-      "  Using cached sentencepiece-0.2.1-cp313-cp313-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl.metadata (10 kB)\n",
-      "Requirement already satisfied: datasets in /home/hayde/miniconda3/lib/python3.13/site-packages (4.4.1)\n",
-      "Requirement already satisfied: tqdm in /home/hayde/miniconda3/lib/python3.13/site-packages (4.67.1)\n",
-      "Requirement already satisfied: zstandard in /home/hayde/miniconda3/lib/python3.13/site-packages (0.23.0)\n",
-      "Requirement already satisfied: filelock in /home/hayde/miniconda3/lib/python3.13/site-packages (from torch) (3.20.0)\n",
-      "Requirement already satisfied: typing-extensions>=4.10.0 in /home/hayde/miniconda3/lib/python3.13/site-packages (from torch) (4.12.2)\n",
-      "Requirement already satisfied: setuptools in /home/hayde/miniconda3/lib/python3.13/site-packages (from torch) (80.9.0)\n",
-      "Requirement already satisfied: sympy>=1.13.3 in /home/hayde/miniconda3/lib/python3.13/site-packages (from torch) (1.14.0)\n",
-      "Requirement already satisfied: networkx>=2.5.1 in /home/hayde/miniconda3/lib/python3.13/site-packages (from torch) (3.5)\n",
-      "Requirement already satisfied: jinja2 in /home/hayde/miniconda3/lib/python3.13/site-packages (from torch) (3.1.6)\n",
-      "Requirement already satisfied: fsspec>=0.8.5 in /home/hayde/miniconda3/lib/python3.13/site-packages (from torch) (2025.10.0)\n",
-      "Requirement already satisfied: nvidia-cuda-nvrtc-cu12==12.8.93 in /home/hayde/miniconda3/lib/python3.13/site-packages (from torch) (12.8.93)\n",
-      "Requirement already satisfied: nvidia-cuda-runtime-cu12==12.8.90 in /home/hayde/miniconda3/lib/python3.13/site-packages (from torch) (12.8.90)\n",
-      "Requirement already satisfied: nvidia-cuda-cupti-cu12==12.8.90 in /home/hayde/miniconda3/lib/python3.13/site-packages (from torch) (12.8.90)\n",
-      "Requirement already satisfied: nvidia-cudnn-cu12==9.10.2.21 in /home/hayde/miniconda3/lib/python3.13/site-packages (from torch) (9.10.2.21)\n",
-      "Requirement already satisfied: nvidia-cublas-cu12==12.8.4.1 in /home/hayde/miniconda3/lib/python3.13/site-packages (from torch) (12.8.4.1)\n",
-      "Requirement already satisfied: nvidia-cufft-cu12==11.3.3.83 in /home/hayde/miniconda3/lib/python3.13/site-packages (from torch) (11.3.3.83)\n",
-      "Requirement already satisfied: nvidia-curand-cu12==10.3.9.90 in /home/hayde/miniconda3/lib/python3.13/site-packages (from torch) (10.3.9.90)\n",
-      "Requirement already satisfied: nvidia-cusolver-cu12==11.7.3.90 in /home/hayde/miniconda3/lib/python3.13/site-packages (from torch) (11.7.3.90)\n",
-      "Requirement already satisfied: nvidia-cusparse-cu12==12.5.8.93 in /home/hayde/miniconda3/lib/python3.13/site-packages (from torch) (12.5.8.93)\n",
-      "Requirement already satisfied: nvidia-cusparselt-cu12==0.7.1 in /home/hayde/miniconda3/lib/python3.13/site-packages (from torch) (0.7.1)\n",
-      "Requirement already satisfied: nvidia-nccl-cu12==2.27.5 in /home/hayde/miniconda3/lib/python3.13/site-packages (from torch) (2.27.5)\n",
-      "Requirement already satisfied: nvidia-nvshmem-cu12==3.3.20 in /home/hayde/miniconda3/lib/python3.13/site-packages (from torch) (3.3.20)\n",
-      "Requirement already satisfied: nvidia-nvtx-cu12==12.8.90 in /home/hayde/miniconda3/lib/python3.13/site-packages (from torch) (12.8.90)\n",
-      "Requirement already satisfied: nvidia-nvjitlink-cu12==12.8.93 in /home/hayde/miniconda3/lib/python3.13/site-packages (from torch) (12.8.93)\n",
-      "Requirement already satisfied: nvidia-cufile-cu12==1.13.1.3 in /home/hayde/miniconda3/lib/python3.13/site-packages (from torch) (1.13.1.3)\n",
-      "Requirement already satisfied: triton==3.5.1 in /home/hayde/miniconda3/lib/python3.13/site-packages (from torch) (3.5.1)\n",
-      "Requirement already satisfied: huggingface-hub<1.0,>=0.34.0 in /home/hayde/miniconda3/lib/python3.13/site-packages (from transformers) (0.36.0)\n",
-      "Requirement already satisfied: numpy>=1.17 in /home/hayde/miniconda3/lib/python3.13/site-packages (from transformers) (2.3.1)\n",
-      "Requirement already satisfied: packaging>=20.0 in /home/hayde/miniconda3/lib/python3.13/site-packages (from transformers) (24.2)\n",
-      "Requirement already satisfied: pyyaml>=5.1 in /home/hayde/miniconda3/lib/python3.13/site-packages (from transformers) (6.0.3)\n",
-      "Requirement already satisfied: regex!=2019.12.17 in /home/hayde/miniconda3/lib/python3.13/site-packages (from transformers) (2025.11.3)\n",
-      "Requirement already satisfied: requests in /home/hayde/miniconda3/lib/python3.13/site-packages (from transformers) (2.32.3)\n",
-      "Requirement already satisfied: tokenizers<=0.23.0,>=0.22.0 in /home/hayde/miniconda3/lib/python3.13/site-packages (from transformers) (0.22.1)\n",
-      "Requirement already satisfied: safetensors>=0.4.3 in /home/hayde/miniconda3/lib/python3.13/site-packages (from transformers) (0.6.2)\n",
-      "Requirement already satisfied: psutil in /home/hayde/miniconda3/lib/python3.13/site-packages (from accelerate) (7.1.3)\n",
-      "Requirement already satisfied: pyarrow>=21.0.0 in /home/hayde/miniconda3/lib/python3.13/site-packages (from datasets) (22.0.0)\n",
-      "Requirement already satisfied: dill<0.4.1,>=0.3.0 in /home/hayde/miniconda3/lib/python3.13/site-packages (from datasets) (0.4.0)\n",
-      "Requirement already satisfied: pandas in /home/hayde/miniconda3/lib/python3.13/site-packages (from datasets) (2.3.0)\n",
-      "Requirement already satisfied: httpx<1.0.0 in /home/hayde/miniconda3/lib/python3.13/site-packages (from datasets) (0.28.1)\n",
-      "Requirement already satisfied: xxhash in /home/hayde/miniconda3/lib/python3.13/site-packages (from datasets) (3.6.0)\n",
-      "Requirement already satisfied: multiprocess<0.70.19 in /home/hayde/miniconda3/lib/python3.13/site-packages (from datasets) (0.70.18)\n",
-      "Requirement already satisfied: aiohttp!=4.0.0a0,!=4.0.0a1 in /home/hayde/miniconda3/lib/python3.13/site-packages (from fsspec[http]<=2025.10.0,>=2023.1.0->datasets) (3.13.2)\n",
-      "Requirement already satisfied: anyio in /home/hayde/miniconda3/lib/python3.13/site-packages (from httpx<1.0.0->datasets) (4.9.0)\n",
-      "Requirement already satisfied: certifi in /home/hayde/miniconda3/lib/python3.13/site-packages (from httpx<1.0.0->datasets) (2025.11.12)\n",
-      "Requirement already satisfied: httpcore==1.* in /home/hayde/miniconda3/lib/python3.13/site-packages (from httpx<1.0.0->datasets) (1.0.9)\n",
-      "Requirement already satisfied: idna in /home/hayde/miniconda3/lib/python3.13/site-packages (from httpx<1.0.0->datasets) (3.7)\n",
-      "Requirement already satisfied: h11>=0.16 in /home/hayde/miniconda3/lib/python3.13/site-packages (from httpcore==1.*->httpx<1.0.0->datasets) (0.16.0)\n",
-      "Requirement already satisfied: hf-xet<2.0.0,>=1.1.3 in /home/hayde/miniconda3/lib/python3.13/site-packages (from huggingface-hub<1.0,>=0.34.0->transformers) (1.2.0)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/hayde/miniconda3/lib/python3.13/site-packages (from requests->transformers) (3.3.2)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/hayde/miniconda3/lib/python3.13/site-packages (from requests->transformers) (2.3.0)\n",
-      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /home/hayde/miniconda3/lib/python3.13/site-packages (from sympy>=1.13.3->torch) (1.3.0)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in /home/hayde/miniconda3/lib/python3.13/site-packages (from jinja2->torch) (3.0.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /home/hayde/miniconda3/lib/python3.13/site-packages (from pandas->datasets) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /home/hayde/miniconda3/lib/python3.13/site-packages (from pandas->datasets) (2025.2)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in /home/hayde/miniconda3/lib/python3.13/site-packages (from pandas->datasets) (2025.2)\n",
-      "Requirement already satisfied: aiohappyeyeballs>=2.5.0 in /home/hayde/miniconda3/lib/python3.13/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.10.0,>=2023.1.0->datasets) (2.6.1)\n",
-      "Requirement already satisfied: aiosignal>=1.4.0 in /home/hayde/miniconda3/lib/python3.13/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.10.0,>=2023.1.0->datasets) (1.4.0)\n",
-      "Requirement already satisfied: attrs>=17.3.0 in /home/hayde/miniconda3/lib/python3.13/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.10.0,>=2023.1.0->datasets) (25.4.0)\n",
-      "Requirement already satisfied: frozenlist>=1.1.1 in /home/hayde/miniconda3/lib/python3.13/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.10.0,>=2023.1.0->datasets) (1.8.0)\n",
-      "Requirement already satisfied: multidict<7.0,>=4.5 in /home/hayde/miniconda3/lib/python3.13/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.10.0,>=2023.1.0->datasets) (6.7.0)\n",
-      "Requirement already satisfied: propcache>=0.2.0 in /home/hayde/miniconda3/lib/python3.13/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.10.0,>=2023.1.0->datasets) (0.4.1)\n",
-      "Requirement already satisfied: yarl<2.0,>=1.17.0 in /home/hayde/miniconda3/lib/python3.13/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.10.0,>=2023.1.0->datasets) (1.22.0)\n",
-      "Requirement already satisfied: six>=1.5 in /home/hayde/miniconda3/lib/python3.13/site-packages (from python-dateutil>=2.8.2->pandas->datasets) (1.17.0)\n",
-      "Requirement already satisfied: sniffio>=1.1 in /home/hayde/miniconda3/lib/python3.13/site-packages (from anyio->httpx<1.0.0->datasets) (1.3.1)\n",
-      "Using cached sentencepiece-0.2.1-cp313-cp313-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl (1.4 MB)\n",
-      "Installing collected packages: sentencepiece\n",
-      "Successfully installed sentencepiece-0.2.1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Installing packages...')\n",
     "! pip install torch transformers accelerate sentencepiece  datasets tqdm zstandard"
@@ -96,16 +16,7 @@
    "execution_count": 1,
    "id": "16d103ba",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/hayde/miniconda3/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tqdm\n",
     "import torch\n",
@@ -118,43 +29,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fd96741d",
    "metadata": {},
    "outputs": [],
    "source": [
     "model_path = \"facebook/opt-1.3b\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_path, use_fast=False)\n",
-    "model = AutoModelForCausalLM.from_pretrained(model_path, device_map=\"cuda\", torch_dtype=torch.float16)"
+    "model = AutoModelForCausalLM.from_pretrained(model_path, device_map=\"cuda\")\n",
+    "dataset=load_dataset('wikitext', 'wikitext-2-raw-v1', split='test')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "176672dc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluate(model, tokenizer, dataset=load_dataset('wikitext', 'wikitext-2-raw-v1', split='test'), batch_size=4, max_length=512):\n",
+    "n_samples=50\n",
+    "def evaluate_perplexity(model,tokenizer):\n",
+    "    tokenized_data=tokenizer(\"/n/n\".join(dataset['text']),return_tensors='pt')\n",
+    "    tokens=tokenized_data.input_ids\n",
     "    model.eval()\n",
-    "    total_loss = 0.0\n",
-    "    total_tokens = 0\n",
+    "    total_loss=0.0\n",
+    "    tokens.to(model.device)\n",
+    "    for i in tqdm.tqdm(range(n_samples)):\n",
+    "        batch=tokens[:,i*2048:(i+1)*2048].to(model.device)\n",
+    "        with torch.no_grad():\n",
+    "            logits=model(batch).logits\n",
+    "            shift_logits=logits[:,:-1,:].contiguous()\n",
+    "            shift_labels=batch[:,1:].contiguous()\n",
+    "            loss_fct=nn.CrossEntropyLoss()\n",
+    "            loss=loss_fct(shift_logits.view(-1,shift_logits.size(-1)),shift_labels.view(-1))\n",
+    "            total_loss+=loss.item()\n",
+    "        del batch\n",
+    "    return(torch.exp(torch.tensor(total_loss/(n_samples))))\n",
     "\n",
-    "    dataloader = torch.utils.data.DataLoader(dataset, batch_size=batch_size)\n",
-    "\n",
-    "    with torch.no_grad():\n",
-    "        for batch in tqdm.tqdm(dataloader):\n",
-    "            inputs = tokenizer(batch['text'], return_tensors='pt', padding=True, truncation=True, max_length=max_length)\n",
-    "            input_ids = inputs['input_ids'].to(model.device)\n",
-    "            attention_mask = inputs['attention_mask'].to(model.device)\n",
-    "\n",
-    "            outputs = model(input_ids, attention_mask=attention_mask, labels=input_ids)\n",
-    "            loss = outputs.loss\n",
-    "            total_loss += loss.item() * input_ids.size(0)\n",
-    "            total_tokens += input_ids.size(0)\n",
-    "\n",
-    "    perplexity = torch.exp(torch.tensor(total_loss / total_tokens))\n",
-    "    return perplexity.item()"
+    "def model_size(model,data_width=16,group_size=-1):\n",
+    "    if group_size!=-1:\n",
+    "        scale_width=16\n",
+    "        zero_point_width=4\n",
+    "        data_width+= (scale_width + zero_point_width)/group_size\n",
+    "    num_params=0\n",
+    "    for n,m in model.named_parameters():\n",
+    "        num_params+=m.numel()\n",
+    "    size_in_bits=num_params*data_width\n",
+    "    size_in_megabytes=size_in_bits/(8*1024*1024)\n",
+    "    return size_in_megabytes\n",
+    "\n"
    ]
   },
   {
@@ -164,27 +87,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_perplexity = evaluate(model, tokenizer)"
+    "### Model info \n",
+    "print(f'Model size (in MB): {model_size(model,data_width=32,group_size=-1)}')\n",
+    "print(f'Model perplexity: {evaluate_perplexity(model,tokenizer)}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50b3d851",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.13.2"
   }
  },
  "nbformat": 4,
